# Jetson-Cube-Orange-Outdoor-Rover

./: .gitignore  APRILTAG_FOLLOW_TESTING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ROADMAP_NOV15_2025.md  DESKTOP_QUICKSTART.md  DESKTOP_SETUP_NOV15_2025.md  DIFF_DRIVE_FIX.md  DISTRIBUTED_SIMULATION_GUIDE.md  ESP32_FIRMWARE_LOCATIONS.txt  ESP32_PINOUT_DIAGRAM.md  ESP32_ULTRASONIC_WIRING_GUIDE.md  ESP32_UPLOAD_TROUBLESHOOTING.md  LLM_INTEGRATION_PLAN.md  MOTION_TUNING_GUIDE.md  NEXT_SESSION_TODO_OCT31.md  OBSTACLE_AVOIDANCE_IMPLEMENTATION_PLAN.md  PIHOLE_WIREGUARD_SETUP.md  PROJECT_INDEX.md  QUICKSTART_SENSOR_TESTING.md  QUICK_TEST_OBSTACLE_AVOIDANCE.md  REACTIVE_AVOIDANCE_TESTING.md  README.md  ROS2_GAZEBO_QUICKSTART.md  SESSION_HANDOFF_NOV15_2025.md  SESSION_LOG_NOV02_2025.md  SESSION_LOG_NOV10_2025.md  SESSION_LOG_NOV11_2025_SIMULATION.md  SESSION_LOG_NOV12_2025.md  SESSION_LOG_NOV15_2025_DESKTOP_SETUP.md  SESSION_NOTES_OCT30_PART2.md  SESSION_NOTES_OCT31_ROS2.md  SESSION_NOTES_OCT31_ROS2_INTEGRATION.md  SIDE_RIGHT_REWIRE_NOTE.md  SYSTEMD_SERVICES.md  TODO_LIST_CURRENT.md  ULTRASONIC_SETUP_GUIDE.md  config.py  generate_apriltag.py  jetson-ultrasonic-bridge.service  launch_desktop_sim.sh  (+13 more)
.claude/: settings.local.json
Current Issues/: README.md
archive/: test_arduino.py  (+34 more)
ros2_ws/src/jetson_rover_sim/: CMakeLists.txt  DIMENSIONS.md
ros2_ws/src/jetson_rover_sim/launch/: full_simulation.launch.py  spawn_rover.launch.py
ros2_ws/src/jetson_rover_sim/models/apriltag_stand/: model.config  model.sdf
ros2_ws/src/jetson_rover_sim/urdf/sensors/: lidar_camera_gps.xacro
(+485 files in other folders)
